[package]
name = "patient-lwn"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.35"
reqwest = { version = "0.11.26", features = ["native-tls-vendored"] }
rss = { version = "2.0.7", features = ["with-serde"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "fs"] }
